objects/ssot__ProblemRelatedItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CommentText__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Problem Related Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemId__c</fullName>
        <label>Problem</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemItemImpactType__c</fullName>
        <label>Problem Item Impact Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemItemImpact__c</fullName>
        <label>Problem Item Impact</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProblemRelatedItemNumber__c</fullName>
        <label>Problem Related Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceId__c</fullName>
        <label>Related Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedReferenceObject__c</fullName>
        <label>Related Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009441461_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProblemRelatedItem_ProblemId_map_Pro_rel</label>
        <referenceTo>ssot__Problem__dlm</referenceTo>
        <relationshipLabel>ProblemRelatedItem_ProblemId_map_Pro_rel</relationshipLabel>
        <relationshipName>rel_1702009441461_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009442442_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProblemRelatedItem_RelatedReferenceI_rel</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>ProblemRelatedItem_RelatedReferenceI_rel</relationshipLabel>
        <relationshipName>rel_1702009442442_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009528168_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProblemRelatedItem_RelatedReferenceI_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProblemRelatedItem_RelatedReferenceI_rel</relationshipLabel>
        <relationshipName>rel_1702009528168_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>